# smbr

./: .gitignore  .s_launcher  .smbr_launcher  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  smbr
salmonbara/: cli.py
salmonbara/core/: output.py  recon_intel.py  recon_summary.py
salmonbara/modules/recon/: recon.py
salmonbara/modules/web/: web_enum.py
smbr/: cli.py
smbr/core/: udp_intel.py  web_intel.py
smbr/modules/payloads/: revshell.py  venom.py
smbr/modules/recon/: recon.py
smbr/modules/web/: web_enum.py
smbrlib/: cli.py
smbrlib/arsenal/: __init__.py  __main__.py  arsenal.py  cheats.json  privesc.json
smbrlib/core/: udp_summary.py
smbrlib/modules/recon/: recon.py
smbrlib/modules/web/: web_enum.py
