[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smbr"
version = "1.0.0"
description = "smbr - Recon & Exploitation Tools"
authors = [
    {name="salmonbara"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "typer",
    "rich",
    "pyperclip"
]

[project.scripts]
smbr = "smbr.cli:app"